--- a/index.html
+++ b/index.html
@@ -5,29 +5,35 @@
     <script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
     <script src="app.js"></script>
-    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body ng-app="taskApp" ng-controller="TaskController">
     <div class="container">
+      <div class="col-sm-3">
+      </div>
       <div class="col-sm-6" id=listwrapper>
+        <form name="taskForm">
+          <fieldset class="form-group" ng-class="{ 'has-error' : taskForm.task.$invalid && !taskForm.task.$pristine }">
+            <input type="text" name="task" ng-model="newTask.title" class="form-control" placeholder="Enter Task" required>
+          </fieldset>
+          <!-- <fieldset class="form-group">
+            <textarea ng-model="newTask.description" class="form-control" placeholder="Enter Description" title="description"></textarea>
+          </fieldset> -->
+          <p ng-show="taskForm.task.$invalid && !taskForm.task.$pristine" class="help-block">Task is required.</p>
+          <input type="submit" class="btn btn-default" ng-click="addTask()" role="button" value="Add it!"/>
+        </form>
+        <br />
         <li ng-repeat="task in tasks">
-          <input type="checkbox" ng-model="task.complete"/>
-          {{task.id}}:{{task.title}}, {{task.createdOn | date}}, {{task.complete}} || <a href="#" ng-click="deleteTask(task.id)">delete</a>
+          {{task.title}}
+          <br />{{task.createdOn | date}}
+          <i class="fa fa-pencil" aria-hidden="true"></i>
+          <a href="#" ng-click="deleteTask(task.id)"><i class="fa fa-trash-o" aria-hidden="true"></i></a>
         </li>
       </div>
-      <div class="col-sm-6">
-        <form name="reviewForm">
-          <p>
-            <fieldset class="form-group">
-              <input ng-model="newTask.title" class="form-control" placeholder="Enter Task" title="title" required/>
-            </fieldset>
-            <fieldset class="form-group">
-              <textarea ng-model="newTask.description" class="form-control" placeholder="Enter Description" title="description" required></textarea>
-            </fieldset>
-            <input type="submit" class="btn btn-default" ng-click="addTask()" role="button" value="Add it!" />
-          </p>
-        </form>
+      <div class="col-sm-3">
       </div>
     </div>
   </body>
