--- a/index.html
+++ b/index.html
@@ -2,10 +2,7 @@
 <html lang="en-US" ng-app="taskApp">
   <head>
     <title>Just a task list</title>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
-    <script src="app.js"></script>
-    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="style.css">
@@ -15,7 +12,7 @@
       <div class="col-sm-3">
       </div>
       <div class="col-sm-6" id="listwrapper">
-        <h1>Task List</h1>
+        <h1>What would you like to do?</h1>
         <form name="taskForm" novalidate>
           <fieldset class="form-group">
             <input type="text" name="task" ng-model="newTask.title" class="form-control" placeholder="Enter Task" required>
@@ -39,5 +36,9 @@
       <div class="col-sm-3">
       </div>
     </div>
+    <script src="https://cdn.firebase.com/js/client/2.2.1/firebase.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
+    <script src="https://cdn.firebase.com/libs/angularfire/1.2.0/angularfire.min.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
